# AmadeusMagic

./: .env.example  .gitignore  README.md  pyproject.toml  run.py
src/amadeus/: __init__.py  api.py  config.py  llm.py  main.py  rag.py  stt.py  tts.py
src/amadeus/web/: index.html
