# Amadeus MVP - Steins;Gate 风格 AI 语音助手后端
# 使用 uv 管理依赖: uv sync / uv run ...
[project]
name = "amadeus-mvp"
version = "0.1.0"
description = "MVP of Amadeus: AI assistant with RAG memory, LLM chat, TTS and voice input (Steins;Gate style)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "openai>=1.55.0",
    "chromadb>=0.5.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
    "httpx>=0.27.0",
    "edge-tts>=6.1.0",
    # 本地 embedding（免费）：用于 RAG 向量化，不依赖 OpenAI 额度
    "sentence-transformers>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/amadeus"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
